refactored project build

--- a/core/shared-lib-wrapper/pom.xml
+++ b/core/shared-lib-wrapper/pom.xml
@@ -152,6 +152,31 @@
                                     <version>${felix-scr-version}</version>
                                 </artifactItem>
                                 <artifactItem>
+                                    <groupId>org.osgi</groupId>
+                                    <artifactId>org.osgi.compendium</artifactId>
+                                    <version>${org.osgi.compendium-version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.dependencymanager.annotation</artifactId>
+                                    <version>${felix-dependencymanager-version}</version>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.dependencymanager</artifactId>
+                                    <version>${felix-dependencymanager-version}</version>
+                                </artifactItem>            
+                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.dependencymanager.runtime</artifactId>
+                                    <version>${felix-dependencymanager-version}</version>
+                                </artifactItem>            
+<!--                                <artifactItem>
+                                    <groupId>org.apache.felix</groupId>
+                                    <artifactId>org.apache.felix.dependencymanager.shell</artifactId>
+                                    <version>${felix-dependencymanager-version}</version>
+                                </artifactItem>-->
+                                <artifactItem>
                                     <groupId>org.broad</groupId>
                                     <artifactId>bigwig</artifactId>
                                     <version>${bigWigVersion}</version>
