--- a/developmentPlugins/DASRegistryServerType/pom.xml
+++ b/developmentPlugins/DASRegistryServerType/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>DasRegistryServerType</artifactId>
     <version>${DasRegistryServerType-version}</version>
     
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
 
     <name>DasRegistryServerType</name>
 
@@ -67,13 +67,22 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-jar-plugin</artifactId>                
-                <configuration>
-                    <archive>  
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                    </archive>
-                    <outputDirectory>${project.parent.basedir}/extbundles</outputDirectory> 
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution> 
+                        <id>copy plugin</id>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>          
+                        <phase>install</phase>      
+                        <configuration>
+                            <target>
+                            <copy file="${project.build.directory}/${project.build.finalName}.jar" todir="${basedir}/../../extbundles"/>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin> 
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -93,17 +102,7 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>bundle-manifest</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>manifest</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>                    
+                <configuration>                                     
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
