--- a/developmentPlugins/TableView/pom.xml
+++ b/developmentPlugins/TableView/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>tableView</artifactId>
     <version>${tableView-version}</version>
     
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
 
     <name>tableView</name>
        
@@ -73,15 +73,24 @@
     </dependencies>
 
     <build>
-        <plugins>  
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>                
-                <configuration>
-                    <archive>  
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                    </archive>
-                    <outputDirectory>${project.parent.basedir}/extbundles</outputDirectory> 
-                </configuration>
+        <plugins>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution> 
+                        <id>copy plugin</id>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>          
+                        <phase>install</phase>      
+                        <configuration>
+                            <target>
+                                <copy file="${project.build.directory}/${project.build.finalName}.jar" todir="${basedir}/../../extbundles"/>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -99,18 +108,8 @@
             </plugin>     
             <plugin>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                
+                <artifactId>maven-bundle-plugin</artifactId>                
                 <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>bundle-manifest</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>manifest</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>                    
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
