--- a/optionalPlugins/geometric-mean/pom.xml
+++ b/optionalPlugins/geometric-mean/pom.xml
@@ -13,7 +13,7 @@
     <version>${geometric-mean-version}</version>
     
     
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
 
     <name>Geometric Mean</name>
 
@@ -63,13 +63,22 @@
     <build>
         <plugins>   
             <plugin>
-                <artifactId>maven-jar-plugin</artifactId>                
-                <configuration>
-                    <archive>  
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                    </archive>
-                    <outputDirectory>${project.parent.basedir}/extbundles/optional</outputDirectory> 
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution> 
+                        <id>copy plugin</id>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>          
+                        <phase>install</phase>      
+                        <configuration>
+                            <target>
+                                <copy file="${project.build.directory}/${project.build.finalName}.jar" todir="${basedir}/../../extbundles/optional"/>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -89,15 +98,6 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>                
                 <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>bundle-manifest</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>manifest</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
                     <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>  
                     <instructions>
