--- a/plugins/KeyWordSearch/pom.xml
+++ b/plugins/KeyWordSearch/pom.xml
@@ -48,6 +48,11 @@
               <scope>provided</scope>
             </dependency>
             <!--End of logging dependencies-->
+            <dependency>
+                <groupId>biz.aQute.bnd</groupId>
+                <artifactId>bndlib</artifactId>
+                <scope>provided</scope>
+            </dependency>
       </dependencies>
 
     <build>
@@ -59,14 +64,11 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
-                        <Embed-Transitive>true</Embed-Transitive>
-                        <Import-Package>com.affymetrix.igb.shared,*;resolution:=optional</Import-Package>
+                        <Import-Package>*</Import-Package>
                         <Export-Package>
                             com.affymetrix.igb.keywordsearch
                         </Export-Package>
-                        <Bundle-Activator>com.affymetrix.igb.keywordsearch.Activator</Bundle-Activator>
-                        <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
+                        <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
             </plugin>
