--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <felix-metatype-version>1.0.10</felix-metatype-version>
         <felix-webconsole-version>4.2.4</felix-webconsole-version>
         <felix-dependencymanager-version>3.2.0</felix-dependencymanager-version>
+        <felix-bundlerepository-version>2.0.2</felix-bundlerepository-version>
         <org.osgi.compendium-version>4.3.1</org.osgi.compendium-version>
         <bindlib-version>2.4.0</bindlib-version>
         <osgiObrServiceVersion>1.0.2</osgiObrServiceVersion>
@@ -713,6 +714,11 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>org.osgi.service.obr</artifactId>
                 <version>${osgiObrServiceVersion}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>org.apache.felix.bundlerepository</artifactId>
+                <version>${felix-bundlerepository-version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.felix</groupId>
