--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -221,6 +221,8 @@ lockTierHeightAction=Lock Tier Height
 unlockTierHeightAction=Unlock Tier Height
 zoomOnSelected=Zoom to Selected
 toggleShowAsPaired=Show as Paired
+noGenomeSelectedTitle=No Genome Selected
+noGenomeSelectedMessage=Please select a Genome
 
 #Load strategies
 LoadStrategy=Don't Load
