--- a/plugins/KeyWordSearch/pom.xml
+++ b/plugins/KeyWordSearch/pom.xml
@@ -15,48 +15,54 @@
 
     <name>KeyWord Search</name>
 
-      <dependencies>
+    <dependencies>
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>igb</artifactId>
             <scope>provided</scope>
         </dependency>
-            <dependency>
-                  <groupId>com.affymetrix</groupId>
-                  <artifactId>affymetrix-common</artifactId>
-                  <scope>provided</scope>
-            </dependency>
-            <dependency>
-                  <groupId>com.affymetrix</groupId>
-                  <artifactId>igb-services-api</artifactId>
-                  <scope>provided</scope>
-            </dependency>
-            <dependency>
-                  <groupId>org.apache.felix</groupId>
-                  <artifactId>org.apache.felix.main</artifactId>
-                  <scope>provided</scope>
-            </dependency>
-            <dependency>
-                  <groupId>com.affymetrix</groupId>
-                  <artifactId>genometry</artifactId>
-                  <scope>provided</scope>
-            </dependency>
-            <!--Start of logging dependencies-->
-            <dependency>
-              <groupId>org.slf4j</groupId>
-              <artifactId>slf4j-api</artifactId>
-              <scope>provided</scope>
-            </dependency>
-            <!--End of logging dependencies-->
-            <dependency>
-                <groupId>biz.aQute.bnd</groupId>
-                <artifactId>bndlib</artifactId>
-                <scope>provided</scope>
-            </dependency>
-      </dependencies>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>affymetrix-common</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>igb-services-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.main</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>genometry</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--Start of logging dependencies-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--End of logging dependencies-->
+        <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>bndlib</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
     <build>
-        <plugins><plugin><artifactId>maven-clean-plugin</artifactId></plugin><plugin><artifactId>maven-dependency-plugin</artifactId></plugin>
+        <plugins>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -65,9 +71,6 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Import-Package>*</Import-Package>
-                        <Export-Package>
-                            com.affymetrix.igb.keywordsearch
-                        </Export-Package>
                         <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
