major rewrite of igb preferences persistence/loading

--- a/core/genometry/pom.xml
+++ b/core/genometry/pom.xml
@@ -115,6 +115,11 @@
             <artifactId>bndlib</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>igb-preferences</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
