--- a/main/pom.xml
+++ b/main/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>console-gui</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>igb-preferences</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <!--End of core module dependencies-->
         
         <!-- Start of external bundle dependencies-->
