--- a/main/pom.xml
+++ b/main/pom.xml
@@ -86,6 +86,11 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <scope>runtime</scope>
