--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,4 @@ extbundles/*
 /optionalPlugins/merge-annotation-operator/target/
 /plugins/track-operations-panel/target/
 /plugins/selection-tracker/target/
+/core/igb-preferences/target/
