fix for default size and position of weblinks panel

--- a/core/weblinks/pom.xml
+++ b/core/weblinks/pom.xml
@@ -110,10 +110,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Import-Package>*</Import-Package>
-                        <Export-Package>
-                            com.lorainelab.igb.preferences.weblink,
-                            com.lorainelab.igb.preferences.weblink.action
-                        </Export-Package>
+                        <Export-Package/>
                         <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
