--- a/core/igb-preferences/pom.xml
+++ b/core/igb-preferences/pom.xml
@@ -77,6 +77,21 @@
             <artifactId>swing-layout</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jidesoft</groupId>
+            <artifactId>jide-ultimate</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>genoviz</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>affymetrix-common</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -102,7 +117,12 @@
                         <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
-            </plugin>         
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.15</version>
+            </plugin>
         </plugins>
     </build>
 </project>
