--- a/plugins/Bookmark/pom.xml
+++ b/plugins/Bookmark/pom.xml
@@ -110,10 +110,9 @@
                     <instructions>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>       
-                        <Import-Package>com.affymetrix.igb.shared,*;resolution:=optional</Import-Package>
+                        <Import-Package>*</Import-Package>
                         <Export-Package/>
-                        <Bundle-Activator>com.affymetrix.igb.bookmarks.Activator</Bundle-Activator>
-                        <Bundle-Category>IGBTabPanel-com.affymetrix.igb.bookmarks.BookmarkManagerViewGUI</Bundle-Category>
+                        <Bundle-Activator>com.affymetrix.igb.bookmarks.Activator</Bundle-Activator>                        
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Service-Component>*</Service-Component>
