--- a/plugins/track-operations-panel/pom.xml
+++ b/plugins/track-operations-panel/pom.xml
@@ -22,11 +22,6 @@
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>affymetrix-common</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.affymetrix</groupId>
             <artifactId>genometry</artifactId>
             <scope>provided</scope>
         </dependency>
@@ -60,6 +55,11 @@
         <dependency>
             <groupId>biz.aQute.bnd</groupId>
             <artifactId>bndlib</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swing-layout</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
