--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
         <thresholding-version>2.0.0</thresholding-version>
         <tutorial-version>2.0.0</tutorial-version>
         <update-version>2.0.1</update-version>
-        <pluginsPage-version>2.0.0</pluginsPage-version>
+        <plugin-manager-version>2.0.0</plugin-manager-version>
         <paired-data-preprocessor-version>2.0.0</paired-data-preprocessor-version>
         
         <console-gui-version>1.0.0</console-gui-version>        
@@ -111,7 +111,6 @@
         <parentOperators-version>0.0.1</parentOperators-version>
         <sampleSelection-version>0.0.1  </sampleSelection-version>
         <searchModeSymetryFilter-version>0.0.1</searchModeSymetryFilter-version>
-        <tableView-version>0.0.1</tableView-version>
         <talleyHandler-version>0.0.1</talleyHandler-version>
         <thousandGenomesServerType-version>0.0.1</thousandGenomesServerType-version>
         <transcriptIsoForm-version>0.0.1</transcriptIsoForm-version>        
@@ -204,7 +203,7 @@
         <module>plugins/Thresholding</module>
         <module>plugins/Tutorial</module>
         <module>plugins/Update</module>
-        <module>plugins/plugins_page</module>
+        <module>plugins/plugin-manager</module>
         <module>plugins/PairedEndDataPreprocessor</module>        
         <module>plugins/ConsoleGui</module>
         <module>main</module>
@@ -223,7 +222,6 @@
                 <module>optionalPlugins/igb-command-socket</module>
                 
                 <module>developmentPlugins/DASRegistryServerType</module>
-                <module>developmentPlugins/TableView</module>
                 <module>developmentPlugins/FindAnnotations</module>
                 <module>developmentPlugins/OverlapAnnotationOperator</module>                
                 <module>developmentPlugins/SampleSelection</module>
@@ -275,7 +273,7 @@
                 <module>plugins/Thresholding</module>
                 <module>plugins/Tutorial</module>
                 <module>plugins/Update</module>
-                <module>plugins/plugins_page</module>
+                <module>plugins/plugin-manager</module>
                 <module>plugins/PairedEndDataPreprocessor</module>                          
                 <!-- end of core modules-->
                 
@@ -285,7 +283,6 @@
                 <module>optionalPlugins/geometric-mean</module>
                 <module>optionalPlugins/igb-command-socket</module>                
                 <module>developmentPlugins/DASRegistryServerType</module>
-                <module>developmentPlugins/TableView</module>
                 <module>developmentPlugins/FindAnnotations</module>
                 <module>developmentPlugins/OverlapAnnotationOperator</module>
                 <module>developmentPlugins/SampleSelection</module>
@@ -492,7 +489,7 @@
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>pluginsPage</artifactId>
-                <version>${pluginsPage-version}</version>
+                <version>${plugin-manager-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -586,12 +583,6 @@
                 <groupId>com.affymetrix</groupId>
                 <artifactId>searchModeSymetryFilter</artifactId>
                 <version>${searchModeSymetryFilter-version}</version>
-                <scope>provided</scope>
-            </dependency> 
-            <dependency>
-                <groupId>com.affymetrix</groupId>
-                <artifactId>tableView</artifactId>
-                <version>${tableView-version}</version>
                 <scope>provided</scope>
             </dependency> 
             <dependency>
